--- a/calc.css
+++ b/calc.css
@@ -4,13 +4,13 @@
 }
 div{
     width: 380px;
-    /*Set width for whole calculator*/
+    /* Set width for whole calculator */
 }
 
 #calc{
     top: 240px;
     left: 400px;
-    /*Size of the button area*/
+    /* Size of the button area */
 
     position: absolute;
 }
@@ -23,11 +23,11 @@ input[type = "button"]{
     font-size: x-large;
     font-family: "Lucida Console", serif;
     font-weight: bold;
-    /*Set the size of each button and font*/
+    /* Set the size of each button and font */
 }
 
 input[type = "button"]:hover{
-    /*hover: mouse hover over the button with background color display*/
+    /* hover: mouse hover over the button with background color display */
     background-color: darkorange;
     border: 1px solid;
 }
@@ -40,14 +40,16 @@ input[type = "text"]{
     font-family: "Lucida Console", serif;
     font-weight: bold;
     text-align: right;
-    /*The size of the display area and font*/
+    /* The size of the display area and font */
 
     background-color: #fff;
     border: 1px solid;
 
     padding-right: 5px;
-    /*Textbox numbers are displayed too close to the right margin
-      add an inner margin  */
+    /** 
+       Textbox numbers are displayed too close to the right margin
+       add an inner margin  
+    */
 
     box-sizing: border-box;
     /**
